test/invalidwiki/Испорченный конфиг/__page.opt
[Generallll]
tags = Тест, test, двойной тег
type = html
